--- a/common/styles.css
+++ b/common/styles.css
@@ -43,6 +43,15 @@ h2 {
     margin-bottom: 5px;
 }
 
+h3 {
+    font-size: 22px;
+    font-weight:normal;
+    color: #434141;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 p {
     color: #434141;
     margin-left: 20px;
